fix: Post heart button size, Mobile overflow probl

--- a/styles/components/post.module.scss
+++ b/styles/components/post.module.scss
@@ -104,8 +104,7 @@
       gap: 5px;
 
       .like_icon_wrap {
-        width: 25px;
-        height: 25px;
+        width: 30px;
         border-radius: 100px;
         display: flex;
         align-items: center;
@@ -125,8 +124,8 @@
         svg {
           color: #484848;
           fill: #484848;
-          width: 16px;
-          height: 16px;
+          width: 20px;
+          height: 20px;
         }
       }
 
