--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -1,5 +1,9 @@
 .layout {
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
 
@@ -10,7 +14,7 @@
   }
 
   main {
-    height: inherit;
+    height: 100%;
     padding: 50px 0px 60px 0px;
     box-sizing: border-box;
   }
